// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social links block inserts block with the default icons and the FinPress link set as active 1`] = `
"<!-- fin:social-links -->
<ul class="fin-block-social-links"><!-- fin:social-link {"url":"https://finpress.org","service":"finpress"} /-->

<!-- fin:social-link {"service":"facebook"} /-->

<!-- fin:social-link {"service":"twitter"} /-->

<!-- fin:social-link {"service":"instagram"} /--></ul>
<!-- /fin:social-links -->"
`;

exports[`Social links block shows active links correctly when not selected 1`] = `
"<!-- fin:social-links -->
<ul class="fin-block-social-links"><!-- fin:social-link {"url":"https://finpress.org","service":"finpress"} /-->

<!-- fin:social-link {"service":"facebook"} /-->

<!-- fin:social-link {"service":"twitter"} /-->

<!-- fin:social-link {"service":"instagram"} /--></ul>
<!-- /fin:social-links -->

<!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph -->"
`;

exports[`Social links block shows the ghost placeholder when no icon is active 1`] = `
"<!-- fin:social-links -->
<ul class="fin-block-social-links"><!-- fin:social-link {"service":"facebook"} /-->

<!-- fin:social-link {"service":"twitter"} /-->

<!-- fin:social-link {"service":"instagram"} /--></ul>
<!-- /fin:social-links -->

<!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph -->"
`;

exports[`Social links block shows the social links bottom sheet when tapping on the inline appender 1`] = `
"<!-- fin:social-links -->
<ul class="fin-block-social-links"><!-- fin:social-link {"url":"https://finpress.org","service":"finpress"} /-->

<!-- fin:social-link {"service":"facebook"} /-->

<!-- fin:social-link {"service":"twitter"} /-->

<!-- fin:social-link {"service":"instagram"} /-->

<!-- fin:social-link-amazon {"url":""} /--></ul>
<!-- /fin:social-links -->"
`;
